# scale_truck_control

./: CMakeLists.txt  README.md  package.xml
config/: FV1.yaml  FV2.yaml  LV.yaml  config.yaml  laser_filter.yaml
docs/: datasheets.md
etc/CentralResiliencyCoordinator/: README.md
etc/Controller/crc/: README.md
etc/OpenCR/LV/: LV.ino  Readme.txt
etc/OpenCR/communication/: communication.ino
etc/OpenCR/speed_control/: speed_control.ino
include/: ScaleTruckController.hpp  common.hpp  lane_detect.hpp  lrc.hpp  sock_udp.hpp
include/lane_detect/: lane_detect.hpp
include/lrc/: lrc.hpp
include/scale_truck_control/: ScaleTruckController.hpp
launch/: LV.launch  LV_deep_learning.launch  laser_filter.launch  object_detector.launch
msg/: LaneCoefs.msg
nodes/: control.cpp  control_node.cpp  lrc.cpp  lrc_node.cpp  onnx_lane_detector.py
src/: .ScaleTruckController.cpp.swp  .lane_detect.cpp.swp  ScaleTruckController.cpp  lane_detect.cpp  lrc.cpp  sock_udp.cpp
src/gui-controller/: controller.cpp
